Bug and consistency fixes + more testing  (#121)
* pyctest + cmake + compiler-instrument
- pyctest naming scheme update
- support for clang instrument-functions-after-inlining
for compiler instrumentation
- restructured some interface libraries for better reuse
- better recognition of nvidia compiler

* update pyctest-runner

* LTO build fixes

* include manager and settings where used

* minor pyctest patches

* TIMEMORY_INTERNAL_TESTING def when testing build
interface

* patch to -finstrument-functions tests

* test_macros echo_dart
- minor explicit tweaks to scope::config

* Fixes to dynamic instrumentation + MPIP
- corrected docs for MPIP and OMPT
- user_bundle extern
- attributes for settings functions
- update READMEs and docs
- renamed timemory-compile-options-extra to timemory-compile-extra

* Hot attribute where appropriate

- removed unnecessary bucket-size checks from hash
- added hot attribute to hash routines
- added hot attribute to settings instance functions
- added hot attribute to scope routines

* - changed enumerators to be prefixed with "TIMEMORY" and suffixed with "idx"
- use macros for backwards-compatibility with old enumerators

* CMake Installation tests + dlsym weak bindings

- dynamic instrumentation doesn't allow
   timemory-{ompt,mpip,ncclp} to properly override
   the weak symbols, new weak symbol will try to dlsym
   these symbols
- fixed installation issues with different languages
- fixed installation issue with missing cmake scripts

* removed including dlfcn.h in weak.cpp on Windows

--- a/cmake/Templates/timemory-config.cmake.in
+++ b/cmake/Templates/timemory-config.cmake.in
@@ -114,6 +114,12 @@ endif()
 
 set(TIMEMORY_C_COMPILER_ID @CMAKE_C_COMPILER_ID@)
 set(TIMEMORY_CXX_COMPILER_ID @CMAKE_CXX_COMPILER_ID@)
+set(TIMEMORY_CUDA_COMPILER_ID @CMAKE_CUDA_COMPILER_ID@)
+
+set(TIMEMORY_USE_CUDA @TIMEMORY_USE_CUDA@)
+if(TIMEMORY_USE_CUDA AND TIMEMORY_CUDA_COMPILER_ID)
+    list(APPEND TIMEMORY_LANGUAGES CUDA)
+endif()
 
 # timemory-threading
 if(NOT WIN32)
@@ -121,6 +127,27 @@ if(NOT WIN32)
     set(THREADS_PREFER_PTHREAD_FLAG @THREADS_PREFER_PTHREAD_FLAG@)
 endif()
 find_package(Threads QUIET @TIMEMORY_FIND_REQUIREMENT@)
+
+# compiler-instrumentation
+# if TIMEMORY_INLINE_COMPILER_INSTRUMENTATION not set, set it to the default
+if(NOT DEFINED TIMEMORY_INLINE_COMPILER_INSTRUMENTATION)
+    set(TIMEMORY_INLINE_COMPILER_INSTRUMENTATION @TIMEMORY_INLINE_COMPILER_INSTRUMENTATION@)
+endif()
+
+get_property(ENABLED_LANGUAGES GLOBAL PROPERTY ENABLED_LANGUAGES)
+foreach(_LANG ${TIMEMORY_LANGUAGES})
+    if(NOT "${_LANG}" IN_LIST ENABLED_LANGUAGES)
+        message(STATUS "Timemory was built with ${_LANG} support. Enabling the ${_LANG} language...")
+        include(CheckLanguage)
+        check_language(${_LANG})
+        if(CMAKE_${_LANG}_COMPILER)
+            enable_language(${_LANG})
+        else()
+            message(WARNING "Timemory was built with ${_LANG} support but this language could not be enabled")
+        endif()
+    endif()
+endforeach()
+unset(ENABLED_LANGUAGES)
 
 #----------------------------------------------------------------------------------------#
 #   Determine install tree or build tree
@@ -337,7 +364,7 @@ if(TIMEMORY_INSTALL_TREE)
     if(NOT TARGET timemory::timemory)
         add_library(timemory::timemory INTERFACE IMPORTED)
     endif()
-    
+
     if(TIMEMORY_BUILD_INTERFACE_LIBRARY)
         target_link_libraries(timemory::timemory INTERFACE ${_INTERFACE_LIB})
     else()
