CircleCI user-build + dev-build
- added non-timemory variants for compiler instrumentation and dynamic instrumentation tests
- fixed timemory-timem-mpi test in pytctest-runner.py
- safety checks when deleting storage

--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -113,6 +113,9 @@ endif()
 
 set(ENV{TIMEMORY_ENABLED} OFF)
 
+# always make sure timemory-test exists
+add_timemory_test_target()
+
 add_subdirectory(external)
 
 set(compiler_instr_env "TIMEMORY_SUPPRESS_CONFIG=ON")
@@ -120,6 +123,7 @@ set(compiler_instr_env "TIMEMORY_SUPPRESS_CONFIG=ON")
 if(TARGET timemory::timemory-compiler-instrument-shared)
     add_timemory_google_test(compiler_instrument_shared_tests
         SOURCES         instrumentation_tests.cpp
+        DEFINITIONS     DISABLE_TIMEMORY
         LINK_LIBRARIES  common-test-libs
                         test-opt-flags
                         ${_LIBRARY}
@@ -127,6 +131,23 @@ if(TARGET timemory::timemory-compiler-instrument-shared)
         ENVIRONMENT     ${compiler_instr_env})
     #
     add_timemory_google_test(compiler_instrument_mt_shared_tests
+        SOURCES         instrumentation_tests.cpp
+        DEFINITIONS     ENABLE_MT DISABLE_TIMEMORY
+        LINK_LIBRARIES  common-test-libs
+                        test-opt-flags
+                        ${_LIBRARY}
+                        timemory::timemory-compiler-instrument-shared
+        ENVIRONMENT     ${compiler_instr_env})
+    #
+    add_timemory_google_test(compiler_instrument_timemory_shared_tests
+        SOURCES         instrumentation_tests.cpp
+        LINK_LIBRARIES  common-test-libs
+                        test-opt-flags
+                        ${_LIBRARY}
+                        timemory::timemory-compiler-instrument-shared
+        ENVIRONMENT     ${compiler_instr_env})
+    #
+    add_timemory_google_test(compiler_instrument_timemory_mt_shared_tests
         SOURCES         instrumentation_tests.cpp
         DEFINITIONS     ENABLE_MT
         LINK_LIBRARIES  common-test-libs
@@ -139,6 +160,7 @@ endif()
 if(TARGET timemory::timemory-compiler-instrument-static)
     add_timemory_google_test(compiler_instrument_static_tests
         SOURCES         instrumentation_tests.cpp
+        DEFINITIONS     DISABLE_TIMEMORY
         LINK_LIBRARIES  common-test-libs
                         test-opt-flags
                         ${_LIBRARY}
@@ -146,6 +168,23 @@ if(TARGET timemory::timemory-compiler-instrument-static)
         ENVIRONMENT     ${compiler_instr_env})
     #
     add_timemory_google_test(compiler_instrument_mt_static_tests
+        SOURCES         instrumentation_tests.cpp
+        DEFINITIONS     ENABLE_MT DISABLE_TIMEMORY
+        LINK_LIBRARIES  common-test-libs
+                        test-opt-flags
+                        ${_LIBRARY}
+                        timemory::timemory-compiler-instrument-static
+        ENVIRONMENT     ${compiler_instr_env})
+    #
+    add_timemory_google_test(compiler_instrument_timemory_static_tests
+        SOURCES         instrumentation_tests.cpp
+        LINK_LIBRARIES  common-test-libs
+                        test-opt-flags
+                        ${_LIBRARY}
+                        timemory::timemory-compiler-instrument-static
+        ENVIRONMENT     ${compiler_instr_env})
+    #
+    add_timemory_google_test(compiler_instrument_timemory_mt_static_tests
         SOURCES         instrumentation_tests.cpp
         DEFINITIONS     ENABLE_MT
         LINK_LIBRARIES  common-test-libs
@@ -642,6 +681,7 @@ if(TIMEMORY_USE_DYNINST)
     endif()
 
     add_executable(dynamic_instrument_tests instrumentation_tests.cpp)
+    target_compile_definitions(dynamic_instrument_tests PRIVATE DISABLE_TIMEMORY)
     target_link_libraries(dynamic_instrument_tests
         common-test-libs
         ${_LIBRARY_TARGET}
@@ -652,6 +692,18 @@ if(TIMEMORY_USE_DYNINST)
         LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
         ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
     add_dependencies(timemory-test dynamic_instrument_tests)
+
+    add_executable(dynamic_instrument_timemory_tests instrumentation_tests.cpp)
+    target_link_libraries(dynamic_instrument_timemory_tests
+        common-test-libs
+        ${_LIBRARY_TARGET}
+        timemory-google-test
+        google-test-debug-options)
+    set_target_properties(dynamic_instrument_timemory_tests PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+        LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+        ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+    add_dependencies(timemory-test dynamic_instrument_timemory_tests)
 
     if(TIMEMORY_USE_MPI)
         set(LAUNCHER "${MPIEXEC_EXECUTABLE} -n 2")
@@ -672,27 +724,30 @@ if(TIMEMORY_USE_DYNINST)
 
     if(TIMEMORY_USE_MPI AND TIMEMORY_USE_GOTCHA)
         list(APPEND _scripts binary-rewrite-mpip)
+        list(APPEND TEST_ENVIRON "TIMEMORY_MPIP_COMPONENTS=wall_clock")
     endif()
 
-    set(COMMAND
-        ${CMAKE_CURRENT_BINARY_DIR}/dynamic_instrument_tests)
+    set(_DYNAMIC_TARGETS dynamic_instrument_timemory_tests dynamic_instrument_tests)
+    foreach(_TARGET ${_DYNAMIC_TARGETS})
+        set(COMMAND
+            ${CMAKE_CURRENT_BINARY_DIR}/${_TARGET})
 
-    configure_file(
-        ${CMAKE_CURRENT_LIST_DIR}/scripts/common.sh.in
-        ${CMAKE_CURRENT_BINARY_DIR}/common.sh @ONLY)
-
-    foreach(_file ${_scripts})
-        set(TEST_NAME dynamic_instrument_tests-${_file})
         configure_file(
-            ${CMAKE_CURRENT_LIST_DIR}/scripts/${_file}.sh.in
-            ${CMAKE_CURRENT_BINARY_DIR}/${_file}.sh @ONLY)
-        add_test(
-            NAME                dynamic_instrument_tests-${_file}
-            COMMAND             ${CMAKE_CURRENT_BINARY_DIR}/${_file}.sh
-            WORKING_DIRECTORY   ${CMAKE_CURRENT_BINARY_DIR})
-        set_tests_properties(${TEST_NAME} PROPERTIES ENVIRONMENT "${TEST_ENVIRON}")
-        add_dependencies(timemory-test dynamic_instrument_tests)
-        set_property(TEST dynamic_instrument_tests-${_file} APPEND PROPERTY
-            DEPENDS dynamic_instrument_tests timemory-run)
+            ${CMAKE_CURRENT_LIST_DIR}/scripts/common.sh.in
+            ${CMAKE_CURRENT_BINARY_DIR}/common.sh @ONLY)
+
+        foreach(_file ${_scripts})
+            set(TEST_NAME ${_TARGET}-${_file})
+            configure_file(
+                ${CMAKE_CURRENT_LIST_DIR}/scripts/${_file}.sh.in
+                ${CMAKE_CURRENT_BINARY_DIR}/${_file}.sh @ONLY)
+            add_test(
+                NAME                ${_TARGET}-${_file}
+                COMMAND             ${CMAKE_CURRENT_BINARY_DIR}/${_file}.sh
+                WORKING_DIRECTORY   ${CMAKE_CURRENT_BINARY_DIR})
+            set_tests_properties(${TEST_NAME} PROPERTIES ENVIRONMENT "${TEST_ENVIRON}")
+            set_property(TEST ${_TARGET}-${_file} APPEND PROPERTY
+                DEPENDS ${_TARGET} timemory-run)
+        endforeach()
     endforeach()
 endif()
