--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
             source activate &&
             conda activate pyctest &&
             python ./pyctest-runner.py -SF --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Debug -j1
-            --quick --build-libs shared --mpi --papi --gotcha --stats --tools mpip dyninst compiler avail timem kokkos --cxx-standard=17
+            --quick --build-libs shared --mpi --papi --gotcha --stats --tools mpip dyninst kokkos --cxx-standard=17
             -- -V --output-on-failure
             -- -DTIMEMORY_BUILD_{CALIPER,GOTCHA}=OFF -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
       - run:
