--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,10 +29,10 @@ jobs:
             export PATH="${HOME}/miniconda/bin:${PATH}" &&
             source activate &&
             conda activate pyctest &&
-            python ./pyctest-runner.py -SF --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Debug -j1
+            python ./pyctest-runner.py -SF --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Debug -j 1
             --quick --build-libs shared --mpi --papi --gotcha --stats --tools mpip dyninst kokkos --cxx-standard=17
             -- -V --output-on-failure
-            -- -DTIMEMORY_BUILD_{CALIPER,GOTCHA}=OFF -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
+            -- -DTIMEMORY_BUILD_{CALIPER,GOTCHA,COMPILER_INSTRUMENTATION}=OFF -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
       - run:
           name: install
           command: >
@@ -68,10 +68,10 @@ jobs:
             export PATH="${HOME}/miniconda/bin:${PATH}" &&
             source activate &&
             conda activate pyctest &&
-            python ./pyctest-runner.py -SF --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Release -j1
+            python ./pyctest-runner.py -SF --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Release -j 1
             --build-libs shared --mpi --papi --gotcha --stats --tools mpip dyninst --cxx-standard=17
             -- -V --output-on-failure
-            -- -DTIMEMORY_BUILD_{CALIPER,GOTCHA}=OFF -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
+            -- -DTIMEMORY_BUILD_{CALIPER,GOTCHA,COMPILER_INSTRUMENTATION}=OFF -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
       - run:
           name: install
           command: >
