--- a/source/tests/scripts/binary-rewrite-stubs.sh.in
+++ b/source/tests/scripts/binary-rewrite-stubs.sh.in
@@ -7,7 +7,7 @@ source $(dirname $(basename ${BASH_SOURCE[0]}))/common.sh
 TEST_NAME=$(basename ${BASH_SOURCE[0]})
 
 export TIMEMORY_OUTPUT_PATH=@CMAKE_CURRENT_BINARY_DIR@/timemory-${TEST_NAME}-output
-export TIMEMORY_OUTPUT_PREFIX="binary-rewrite-"
+export TIMEMORY_OUTPUT_PREFIX="binary-rewrite-stubs"
 export TIMEMORY_TEXT_OUTPUT=ON
 export TIMEMORY_FILE_OUTPUT=ON
 export TIMEMORY_AUTO_OUTPUT=ON
