--- a/source/tests/scripts/custom-components.sh.in
+++ b/source/tests/scripts/custom-components.sh.in
@@ -8,7 +8,7 @@ TEST_NAME=$(basename ${BASH_SOURCE[0]})
 USE_PAPI="@USE_PAPI@"
 
 export TIMEMORY_OUTPUT_PATH=@CMAKE_CURRENT_BINARY_DIR@/timemory-${TEST_NAME}-output
-export TIMEMORY_OUTPUT_PREFIX="custom-components-"
+export TIMEMORY_OUTPUT_PREFIX="custom-components"
 export TIMEMORY_TEXT_OUTPUT=ON
 export TIMEMORY_FILE_OUTPUT=ON
 export TIMEMORY_AUTO_OUTPUT=ON
