--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
           command: >
             cd build-timemory/Linux &&
             make install -j &&
+            export CMAKE_PREFIX_PATH=${HOME}/timemory-install:${CMAKE_PREFIX_PATH} &&
             cd ../../examples &&
             mkdir build-examples &&
             cd build-examples &&
@@ -69,7 +70,7 @@ jobs:
             source activate &&
             conda activate pyctest &&
             python ./pyctest-runner.py -SF --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Release -j 1
-            --build-libs shared --mpi --papi --gotcha --stats --tools mpip dyninst --cxx-standard=17
+            --build-libs shared --mpi --papi --gotcha --tools mpip dyninst --cxx-standard=17
             -- -V --output-on-failure
             -- -DTIMEMORY_BUILD_{CALIPER,GOTCHA,COMPILER_INSTRUMENTATION}=OFF -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
       - run:
@@ -77,11 +78,11 @@ jobs:
           command: >
             cd build-timemory/Linux &&
             make install -j &&
+            export CMAKE_PREFIX_PATH=${HOME}/timemory-install:${CMAKE_PREFIX_PATH} &&
             cd ../../examples &&
             mkdir build-examples &&
             cd build-examples &&
-            cmake .. &&
-            make ex_array_of_bundles
+            cmake ..
 
 workflows:
   version: 2
