Fixes for ompt weak symbols + custom-dynamic-instr

--- a/source/tests/external/CMakeLists.txt
+++ b/source/tests/external/CMakeLists.txt
@@ -49,6 +49,10 @@ if(NOT TIMEMORY_SKIP_BUILD AND _BUILD)
             timemory::timemory-cxx-${_LIB_TAG}
             timemory::timemory-plotting
             common-test-libs)
+        set_target_properties(custom-dynamic-instr PROPERTIES
+            LIBRARY_OUTPUT_DIRECTORY    ${PROJECT_BINARY_DIR}
+            ARCHIVE_OUTPUT_DIRECTORY    ${PROJECT_BINARY_DIR}
+            RUNTIME_OUTPUT_DIRECTORY    ${PROJECT_BINARY_DIR})
     endif()
 endif()
 
