Reduce ctest timeout values

--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -2,6 +2,8 @@
 # include the current directory
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
+set(CTEST_TEST_TIMEOUT 180)
+
 set(_EXCLUDE)
 if(NOT TIMEMORY_BUILD_TESTING)
     set(_EXCLUDE EXCLUDE_FROM_ALL)
