--- a/source/tests/scripts/custom-components.sh.in
+++ b/source/tests/scripts/custom-components.sh.in
@@ -15,6 +15,7 @@ export TIMEMORY_AUTO_OUTPUT=ON
 export TIMEMORY_TREE_OUTPUT=OFF
 export TIMEMORY_JSON_OUTPUT=OFF
 export TIMEMORY_COUT_OUTPUT=ON
+export TIMEMORY_FLAMEGRAPH_OUTPUT=OFF
 
 rm -rf ${TIMEMORY_OUTPUT_PATH}
 
@@ -27,7 +28,7 @@ export LD_LIBRARY_PATH=@PROJECT_BINARY_DIR@:${LD_LIBRARY_PATH}
 # run the instrumented binary
 @LAUNCH@ @COMMAND@.inst
 
-MONO_FILE="${TIMEMORY_OUTPUT_PATH}/${TIMEMORY_OUTPUT_PREFIX}-monotonic.txt"
+MONO_FILE="${TIMEMORY_OUTPUT_PATH}/${TIMEMORY_OUTPUT_PREFIX}-monotonic_clock.txt"
 IPC_FILE="${TIMEMORY_OUTPUT_PATH}/${TIMEMORY_OUTPUT_PREFIX}-inst_per_cycle.txt"
 
 if [ ! -f "${MONO_FILE}" ]; then
