--- a/source/tests/scripts/launch-process.sh.in
+++ b/source/tests/scripts/launch-process.sh.in
@@ -14,6 +14,7 @@ export TIMEMORY_AUTO_OUTPUT=ON
 export TIMEMORY_TREE_OUTPUT=OFF
 export TIMEMORY_JSON_OUTPUT=OFF
 export TIMEMORY_COUT_OUTPUT=ON
+export TIMEMORY_FLAMEGRAPH_OUTPUT=OFF
 
 rm -rf ${TIMEMORY_OUTPUT_PATH}
 
@@ -21,7 +22,7 @@ rm -rf ${TIMEMORY_OUTPUT_PATH}
 export LD_LIBRARY_PATH=@PROJECT_BINARY_DIR@:${LD_LIBRARY_PATH}
 
 # launch
-@PROJECT_BINARY_DIR@/timemory-run -v 3 -- @COMMAND@
+@PROJECT_BINARY_DIR@/timemory-run -l --label args return -- @COMMAND@
 
 WALL_FILE="${TIMEMORY_OUTPUT_PATH}/${TIMEMORY_OUTPUT_PREFIX}-wall.txt"
 
@@ -36,4 +37,15 @@ else
         echo -e "$(cat ${WALL_FILE} | grep '>>>')"
         exit 1
     fi
+    NCONSUME=$(cat ${WALL_FILE} | grep 'details::consume(' | wc -l)
+    CCONSUME=$(cat ${WALL_FILE} | grep 'details::consume(')
+    if [ "${NCONSUME}" -lt 2 ]; then
+        echo -e "\nMissing 'details::consume' function and loop instrumentation w/ arguments in \"${WALL_FILE}\":\n"
+        echo -e "$(cat ${WALL_FILE})"
+        echo -e "\nShould contain something similar to:\n"
+        echo -e "| >>>   |_long int details::consume(long int)"
+        echo -e "| >>>     |_long int details::consume(long int)/[{148,11}-{149,4}]"
+        exit 1
+    fi
+
 fi
