--- a/source/tests/scripts/binary-rewrite-mpip.sh.in
+++ b/source/tests/scripts/binary-rewrite-mpip.sh.in
@@ -5,16 +5,27 @@
 source $(dirname $(basename ${BASH_SOURCE[0]}))/common.sh
 
 TEST_NAME=$(basename ${BASH_SOURCE[0]})
+
 export TIMEMORY_OUTPUT_PATH=@CMAKE_CURRENT_BINARY_DIR@/timemory-${TEST_NAME}-output
+export TIMEMORY_TEXT_OUTPUT=ON
+export TIMEMORY_FILE_OUTPUT=ON
+export TIMEMORY_AUTO_OUTPUT=ON
+export TIMEMORY_TREE_OUTPUT=OFF
+export TIMEMORY_JSON_OUTPUT=OFF
+export TIMEMORY_COUT_OUTPUT=ON
+export TIMEMORY_FLAMEGRAPH_OUTPUT=OFF
+
 rm -rf ${TIMEMORY_OUTPUT_PATH}
 
 export TIMEMORY_OUTPUT_PREFIX="orig"
 
+# add path to libtimemory to LD_LIBRARY_PATH
+export LD_LIBRARY_PATH=@PROJECT_BINARY_DIR@:${LD_LIBRARY_PATH}
+
 # no instrumentation
 @MPIEXEC_EXECUTABLE@ -n 2 @COMMAND@
 
-# add path to libtimemory to LD_LIBRARY_PATH
-export LD_LIBRARY_PATH=@PROJECT_BINARY_DIR@:${LD_LIBRARY_PATH}
+ORIG_WALL_FILE="${TIMEMORY_OUTPUT_PATH}/${TIMEMORY_OUTPUT_PREFIX}-wall.txt"
 
 export TIMEMORY_OUTPUT_PREFIX="mpip"
 
@@ -24,17 +35,25 @@ export TIMEMORY_OUTPUT_PREFIX="mpip"
 # run the application
 @MPIEXEC_EXECUTABLE@ -n 2 @LAUNCH@ @COMMAND@.inst
 
-NORIG=$(count-lines ${TIMEMORY_OUTPUT_PATH}/orig-*.txt)
+if [ -f "${ORIG_WALL_FILE}" ]; then
+    NORIG=$(count-lines ${TIMEMORY_OUTPUT_PATH}/orig-*.txt)
+    CORIG=$(cat ${TIMEMORY_OUTPUT_PATH}/orig-*.txt | grep '>>>')
+else
+    NORIG=0
+    CORIG=""
+fi
+
 NMPIP=$(count-lines ${TIMEMORY_OUTPUT_PATH}/mpip-*.txt)
+CMPIP=$(cat ${TIMEMORY_OUTPUT_PATH}/mpip-*.txt | grep '>>>')
 
 if [ "${NMPIP}" -le "${NORIG}" ]; then
-    echo -e "Orig output line count: ${NORIG}"
+    echo -e "ORIG output line count: ${NORIG}"
     echo -e "MPIP output line count: ${NMPIP}"
-    echo -e "MPIP should be > Orig"
-    echo -e "\nOrig:\n"
-    echo -e "$(cat ${TIMEMORY_OUTPUT_PATH}/orig-*.txt | grep '>>>')"
+    echo -e "MPIP should be > ORIG"
+    echo -e "\nORIG:\n"
+    echo -e "${CORIG}"
     echo -e "\nMPIP:\n"
-    echo -e "$(cat ${TIMEMORY_OUTPUT_PATH}/mpip-*.txt | grep '>>>')"
+    echo -e "${CMPIP}"
     exit 1
 fi
 
