--- a/source/tests/scripts/binary-rewrite-stubs.sh.in
+++ b/source/tests/scripts/binary-rewrite-stubs.sh.in
@@ -14,6 +14,7 @@ export TIMEMORY_AUTO_OUTPUT=ON
 export TIMEMORY_TREE_OUTPUT=OFF
 export TIMEMORY_JSON_OUTPUT=OFF
 export TIMEMORY_COUT_OUTPUT=ON
+export TIMEMORY_FLAMEGRAPH_OUTPUT=OFF
 
 rm -rf ${TIMEMORY_OUTPUT_PATH}
 
