--- a/source/tests/scripts/region-sync.sh.in
+++ b/source/tests/scripts/region-sync.sh.in
@@ -5,7 +5,17 @@
 source $(dirname $(basename ${BASH_SOURCE[0]}))/common.sh
 
 TEST_NAME=$(basename ${BASH_SOURCE[0]})
+
 export TIMEMORY_OUTPUT_PATH=@CMAKE_CURRENT_BINARY_DIR@/timemory-${TEST_NAME}-trace-output
+export TIMEMORY_OUTPUT_PREFIX="region-sync"
+export TIMEMORY_TEXT_OUTPUT=ON
+export TIMEMORY_FILE_OUTPUT=ON
+export TIMEMORY_AUTO_OUTPUT=ON
+export TIMEMORY_TREE_OUTPUT=OFF
+export TIMEMORY_JSON_OUTPUT=OFF
+export TIMEMORY_COUT_OUTPUT=ON
+export TIMEMORY_FLAMEGRAPH_OUTPUT=OFF
+
 rm -rf ${TIMEMORY_OUTPUT_PATH}
 
 # add path to libtimemory to LD_LIBRARY_PATH
