better shared vs. static decision in timemory-config-components.cmake

--- a/cmake/Templates/timemory-config-components.cmake.in
+++ b/cmake/Templates/timemory-config-components.cmake.in
@@ -57,8 +57,18 @@ elseif("static" IN_LIST timemory_FIND_COMPONENTS)
 else()
     if(BUILD_SHARED_LIBS)
         set(_LINK shared)
-    else()
+    elseif(BUILD_STATIC_LIBS OR (DEFINED BUILD_SHARED_LIBS AND NOT BUILD_SHARED_LIBS))
         set(_LINK static)
+    else()
+        set(_TIMEMORY_SHARED @BUILD_SHARED_LIBS@)
+        set(_TIMEMORY_STATIC @BUILD_STATIC_LIBS@)
+        if(_TIMEMORY_SHARED)
+            set(_LINK shared)
+        elseif(_TIMEMORY_STATIC)
+            set(_LINK static)
+        endif()
+        unset(_TIMEMORY_SHARED)
+        unset(_TIMEMORY_STATIC)
     endif()
 endif()
 
@@ -79,7 +89,7 @@ macro(timemory_LINK_TARGET_IF_EXISTS _TARGET)
     if(NOT "${_TARGET_REAL}" STREQUAL "")
         set(_TARGET ${_TARGET_REAL})
     endif()
-      
+
     if(TIMEMORY_INSTALL_TREE)
         set(_TARGET_NAME timemory::${_TARGET})
     else()
@@ -89,7 +99,7 @@ macro(timemory_LINK_TARGET_IF_EXISTS _TARGET)
     if(DEFINED timemory_DEBUG)
         message(STATUS "TARGET: ${_TARGET}")
     endif()
-      
+
     if("${_TARGET}" IN_LIST timemory_FIND_COMPONENTS OR TARGET ${_TARGET_NAME})
 
         if(TARGET ${_TARGET_NAME})
@@ -217,4 +227,3 @@ endif()
 unset(_COMPONENT_LIST)
 unset(_LINK)
 unset(_LANGUAGES)
-
