--- a/source/tests/scripts/common.sh.in
+++ b/source/tests/scripts/common.sh.in
@@ -21,3 +21,10 @@ count-lines()
     done
     echo ${n}
 }
+
+emit-separator()
+{
+    echo -e "\n#########################################################################################"
+    echo -e "#\n#\n#\t$@\n#\n#"
+    echo -e "#########################################################################################\n"
+}
