--- a/source/tests/scripts/region-sync.sh.in
+++ b/source/tests/scripts/region-sync.sh.in
@@ -6,8 +6,7 @@ source $(dirname $(basename ${BASH_SOURCE[0]}))/common.sh
 
 TEST_NAME=$(basename ${BASH_SOURCE[0]})
 
-export TIMEMORY_OUTPUT_PATH=@CMAKE_CURRENT_BINARY_DIR@/timemory-${TEST_NAME}-trace-output
-export TIMEMORY_OUTPUT_PREFIX="region-sync"
+export TIMEMORY_OUTPUT_PATH=@CMAKE_CURRENT_BINARY_DIR@/dynamic/timemory-@TEST_NAME@-output
 export TIMEMORY_TEXT_OUTPUT=ON
 export TIMEMORY_FILE_OUTPUT=ON
 export TIMEMORY_AUTO_OUTPUT=ON
@@ -21,26 +20,37 @@ rm -rf ${TIMEMORY_OUTPUT_PATH}
 # add path to libtimemory to LD_LIBRARY_PATH
 export LD_LIBRARY_PATH=@PROJECT_BINARY_DIR@:${LD_LIBRARY_PATH}
 
-# add dynamic instrumentation in trace mode. no synchronization
-@PROJECT_BINARY_DIR@/timemory-run --mode=trace -o @COMMAND@.trace.inst -- @COMMAND@
+emit-separator "Performing binary re-write in trace mode"
+
+# add dynamic instrumentation in trace mode
+@PROJECT_BINARY_DIR@/timemory-run --mode=trace -o ./@TEST_NAME@.trace.inst -- @COMMAND@
+
+emit-separator "Executing instrumented binary"
+
+export TIMEMORY_OUTPUT_PREFIX="region-sync-trace"
 
 # run trace mode instrumented binary
-@COMMAND@.trace.inst
+./@TEST_NAME@.trace.inst
 
-export TIMEMORY_OUTPUT_PATH=@CMAKE_CURRENT_BINARY_DIR@/timemory-${TEST_NAME}-region-output
-rm -rf ${TIMEMORY_OUTPUT_PATH}
+emit-separator "Performing binary re-write in region mode"
 
-# add dynamic instrumentation in region mode. synchronization applied
-@PROJECT_BINARY_DIR@/timemory-run --mode=region -o @COMMAND@.region.inst -- @COMMAND@
+# add dynamic instrumentation in region mode
+@PROJECT_BINARY_DIR@/timemory-run --mode=region -o ./@TEST_NAME@.region.inst -- @COMMAND@
+
+emit-separator "Executing instrumented binary"
+
+export TIMEMORY_OUTPUT_PREFIX="region-sync-region"
 
 # run region mode instrumented binary
-@COMMAND@.region.inst
+./@TEST_NAME@.region.inst
 
-TRACE_OUTPUT=$(cat @CMAKE_CURRENT_BINARY_DIR@/timemory-${TEST_NAME}-trace-output/*.txt | grep '>>>')
-REGION_OUTPUT=$(cat @CMAKE_CURRENT_BINARY_DIR@/timemory-${TEST_NAME}-region-output/*.txt | grep '>>>')
+emit-separator "Analyzing results in ${TIMEMORY_OUTPUT_PATH}"
 
-NTRACE=$(count-lines @CMAKE_CURRENT_BINARY_DIR@/timemory-${TEST_NAME}-trace-output/*.txt)
-NREGION=$(count-lines @CMAKE_CURRENT_BINARY_DIR@/timemory-${TEST_NAME}-region-output/*.txt)
+TRACE_OUTPUT=$(cat ${TIMEMORY_OUTPUT_PATH}/region-sync-trace*.txt | grep '>>>')
+REGION_OUTPUT=$(cat ${TIMEMORY_OUTPUT_PATH}/region-sync-region*.txt | grep '>>>')
+
+NTRACE=$(count-lines ${TIMEMORY_OUTPUT_PATH}/region-sync-trace*.txt)
+NREGION=$(count-lines ${TIMEMORY_OUTPUT_PATH}/region-sync-region*.txt)
 
 if [ "${NTRACE}" -lt 3 ]; then
     echo -e "Trace output was only ${NTRACE} lines (< 3)\n"
