Python Hatchet Submodule (#125)
* Added support for building with hatchet as internal python submodule

- e.g. timemory.hatchet

* Updated cmake, submodule, and init.py

- hatchet submodule had some minor changes
- non-conflicting import
- better handling of finding cython

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -13,3 +13,28 @@ if(TIMEMORY_BUILD_PYTHON AND TIMEMORY_BUILD_PYTHON_LINE_PROFILER)
         add_dependencies(libpytimemory _line_profiler)
     endif()
 endif()
+
+if(TIMEMORY_BUILD_PYTHON AND TIMEMORY_BUILD_PYTHON_HATCHET)
+    checkout_git_submodule(RECURSIVE
+        RELATIVE_PATH external/hatchet
+        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+        REPO_URL https://github.com/jrmadsen/hatchet.git
+        REPO_BRANCH timemory)
+
+    # line_profiler might have already found Cython
+    if(CYTHON_EXECUTABLE)
+        find_package(Cython QUIET)
+    endif()
+
+    if(CYTHON_EXECUTABLE OR Cython_FOUND)
+        message(STATUS "Adding external/hatchet")
+        add_subdirectory(hatchet)
+    else()
+        message(WARNING "Internal Hatchet could not built because Cython could not be found")
+        set(TIMEMORY_BUILD_PYTHON_HATCHET OFF PARENT_SCOPE)
+    endif()
+
+    if(TARGET libpytimemory AND TARGET hatchet)
+        add_dependencies(libpytimemory hatchet)
+    endif()
+endif()
