Efforts to reduce compile time + docs + google-test
- selective extern templates for auto-timer
- more extern templates for runtime functions
- removed nearly all unnecessary ADL in operations
- removed all value_type aliases at operation class-level
  - this reduces the minimal component requirements
- update google-test to use forked repo where cmake warnings are fixed
- a lot of the README was migrated to the documentation

--- a/examples/ex-array-of-bundles/CMakeLists.txt
+++ b/examples/ex-array-of-bundles/CMakeLists.txt
@@ -9,7 +9,8 @@ set(timemory_FIND_COMPONENTS_INTERFACE timemory-array-of-bundles-example)
 
 # find the timemory package and specify you want the C++ library (cxx)
 find_package(timemory REQUIRED
-    COMPONENTS cxx)
+    COMPONENTS cxx
+    OPTIONAL_COMPONENTS compile-options)
 
 # create your executable
 add_executable(ex_array_of_bundles
