--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/jrmadsen/pybind11.git
 [submodule "external/google-test"]
 	path = external/google-test
-	url = https://github.com/google/googletest.git
+	url = https://github.com/jrmadsen/googletest.git
 [submodule "external/caliper"]
 	path = external/caliper
 	url = https://github.com/jrmadsen/Caliper.git
